--- a/google.html
+++ b/google.html
@@ -39,8 +39,8 @@
 				<form>
 					<input id="searchbar" spellcheck="false"></input>
 					<div id="buttons">
-						<center><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="button">Google Search</a>
-						<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="button">I'm Feeling Lucky</a></center>
+						<center><a href="" class="button">Google Search</a>
+						<a href="" class="button">I'm Feeling Lucky</a></center>
 					</div>
 				</form>
 
